SEO and sitemap plugin

--- a/doks-theme/_layouts/default.html
+++ b/doks-theme/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		{% include site-head.html %}
+		{% seo %}
 	</head>
 	<body class="{{ site.doks.color_theme }}" data-spy="scroll" data-target=".js-scrollspy">
 		{% include site-header.html %}
