--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		{% include site-head.html %}
+		{% seo %}
 	</head>
 	<body class="{{ site.doks.color_theme }}">
 		<div class="hero-subheader{% if page.grid_navigation %} hero-subheader--before-out{% endif %}">
